<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.castrodev.myappportfolio.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/my_nanodegree_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textAlignment="center" />

        <Button
            android:text="@string/popular_movies"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPopularMovies"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:background="@color/colorButton"
            android:layout_margin="4dp"
            android:onClick="showApp"/>

        <Button
            android:text="@string/stock_hawk"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStockHawk"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:background="@color/colorButton"
            android:layout_margin="4dp"
            android:onClick="showApp"/>

        <Button
            android:text="@string/build_it_bigger"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBuildItBigger"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:background="@color/colorButton"
            android:layout_margin="4dp"
            android:onClick="showApp"/>

        <Button
            android:text="@string/make_your_app_material"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMakeYourAppMaterial"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:background="@color/colorButton"
            android:layout_margin="4dp"
            android:onClick="showApp"/>

        <Button
            android:text="@string/go_ubiquitous"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGoUbiquitous"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:background="@color/colorButton"
            android:layout_margin="4dp"
            android:onClick="showApp"/>

        <Button
            android:text="@string/capstone"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCapstone"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:background="@color/colorButton"
            android:layout_margin="4dp"
            android:onClick="showApp"/>
    </LinearLayout>
</RelativeLayout>
